# ropes

./: .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
cmake/: general.cmake
include/: expression.hpp  graphics.hpp  math.hpp  physics.hpp  simulation.hpp
include/math/: element_wise.hpp  values.hpp  vector.hpp
src/: expression.cpp  graphics.cpp  main.cpp  simulation.cpp
test/: expression.cpp
